# bulletin-analysis

./: .env.example  .gitignore  Dockerfile  Entrega1.docx  README.md  docker-compose.yml  pyproject.toml  ~$trega1.docx
data/: finetuning_samples_for_labeling.csv
misc/: berlati_gonzalo_entrega_1.docx  prompt.txt
notebooks/: eda.ipynb  eda_finetuning.ipynb  eda_structured_db.ipynb
src/: config.py  database.py  scraper.py
